--- a/views/base.pug
+++ b/views/base.pug
@@ -8,6 +8,8 @@ html(lang="en")
       link(rel="stylesheet", href="/css/style.css")
       link(rel="shortcut icon", type="image/png", href="/img/favicon.png")
       title Natours | #{title}
+  
+  body(data-alert=`${alert ? alert: ''}`)
     // HEADER 
     include _header
     // CONTENT
