--- a/views/account.pug
+++ b/views/account.pug
@@ -1,8 +1,8 @@
 extends base
 
 mixin navItem(link, text, icon, active)
-    li(classname=`${active ? 'side-nav--active': ''}`)
-        a(href=`${link}`, onclick="handleNavClick(this)")
+    li(class=`${active ? 'side-nav--active': ''}`)
+        a(href=`${link}`)
             svg
                 use(xlink:href=`img/icons.svg#icon-${icon}`)
             | #{text}
@@ -27,35 +27,34 @@ block content
                             +navItem('#', 'Manage bookings', 'briefcase', false)
 
             .user-view__content
-                block myContent
-                    .user-view__form-container
-                        h2.heading-secondary.ma-bt-md Your account settings
-                        form.form.form-user-data
-                            .form__group
-                                label.form__label(for='name') Name
-                                input#name.form__input(type='text', value=`${user.name}`, required, name='name')
-                            .form__group.ma-bt-md
-                                label.form__label(for='email') Email address
-                                input#email.form__input(type='email', value=`${user.email}`, required, name='email')
-                            .form__group.form__photo-upload
-                                img.form__user-photo(src=`/img/users/${user.photo}`, alt="User's photo")
-                                input.form__upload(type="file",accept='image/*' id="photo", name='photo')
-                                label(for='photo') Choose new Photo
-                            .form__group.right
-                                button.btn.btn--small.btn--green Save settings
+                .user-view__form-container
+                    h2.heading-secondary.ma-bt-md Your account settings
+                    form.form.form-user-data
+                        .form__group
+                            label.form__label(for='name') Name
+                            input#name.form__input(type='text', value=`${user.name}`, required, name='name')
+                        .form__group.ma-bt-md
+                            label.form__label(for='email') Email address
+                            input#email.form__input(type='email', value=`${user.email}`, required, name='email')
+                        .form__group.form__photo-upload
+                            img.form__user-photo(src=`/img/users/${user.photo}`, alt="User's photo")
+                            input.form__upload(type="file",accept='image/*' id="photo", name='photo')
+                            label(for='photo') Choose new Photo
+                        .form__group.right
+                            button.btn.btn--small.btn--green Save settings
 
-                    .line &nbsp;
-                    .user-view__form-container
-                        h2.heading-secondary.ma-bt-md Password change
-                        form.form.form-user-password
-                            .form__group
-                                label.form__label(for='password-current') Current password
-                                input#password-current.form__input(type='password', placeholder='••••••••', required, minlength='8')
-                            .form__group
-                                label.form__label(for='password') New password
-                                input#password.form__input(type='password', placeholder='••••••••', required, minlength='8')
-                            .form__group.ma-bt-lg
-                                label.form__label(for='password-confirm') Confirm password
-                                input#password-confirm.form__input(type='password', placeholder='••••••••', required, minlength='8')
-                            .form__group.right
-                                button.btn.btn--small.btn--green.btn--update-password Save password
+                .line &nbsp;
+                .user-view__form-container
+                    h2.heading-secondary.ma-bt-md Password change
+                    form.form.form-user-password
+                        .form__group
+                            label.form__label(for='password-current') Current password
+                            input#password-current.form__input(type='password', placeholder='••••••••', required, minlength='8')
+                        .form__group
+                            label.form__label(for='password') New password
+                            input#password.form__input(type='password', placeholder='••••••••', required, minlength='8')
+                        .form__group.ma-bt-lg
+                            label.form__label(for='password-confirm') Confirm password
+                            input#password-confirm.form__input(type='password', placeholder='••••••••', required, minlength='8')
+                        .form__group.right
+                            button.btn.btn--small.btn--green.btn--update-password Save password
