--- a/views/base.pug
+++ b/views/base.pug
@@ -15,7 +15,7 @@ html(lang="en")
     // CONTENT
     block content 
       h1 This is a placeholder heading
-
+    block overlay
     // FOOTER
     include _footer
 
