--- a/views/myReview.pug
+++ b/views/myReview.pug
@@ -1,4 +1,4 @@
-extends account
+extends base
 
 mixin reviewItem(to, text, icon, active)
     li(classname=`${active ? 'side-nav--active': ''}`)
@@ -6,7 +6,7 @@ mixin reviewItem(to, text, icon, active)
             svg
                 use(xlink:href=`img/icons.svg#icon-${icon}`)
             | #{text}
-block myContent
+block content
     main.main 
         .card-container
             each review in reviews
@@ -25,3 +25,7 @@ block myContent
                             each start in [1, 2, 3, 4, 5]
                                 svg.reviews__star(class=`reviews__star--${review.rating >= start ? 'active': 'inactive'}`)
                                     use(xlink:href='/img/icons.svg#icon-star')
+                        a.btn.btn--green.btn--small(href=`/edit-review?id=${review._id}`) Edit
+
+    if showEditReviewOverlay
+        include editReview
