--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1174,6 +1174,10 @@ body {
   grid-column-gap: 1rem;
   grid-row-gap: 1rem;
   margin-top: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 .card__footer-value {
   font-weight: 700;
@@ -1348,30 +1352,32 @@ body {
 
 .overlay__content {
   background-color: white;
+  width: 40%;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Add shadow for depth */
 }
 
 /* Style form elements */
-.form__group {
+.form__group-edit {
   margin-bottom: 20px;
 }
 
-label {
+.form__group-edit label {
   display: block;
   margin-bottom: 5px;
+  font-size: small;
 }
 
-input[type="text"],
-input[type="number"] {
+.form__group-edit input[type="text"],
+.form__group-edit input[type="number"] {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
 
-button[type="submit"] {
+.form__group-edit form button[type="submit"] {
   padding: 10px 20px;
   background-color: #28a745; /* Green color */
   color: white;
@@ -1380,6 +1386,48 @@ button[type="submit"] {
   cursor: pointer;
 }
 
-button[type="submit"]:hover {
+.form__group-edit form button[type="submit"]:hover {
   background-color: #218838; /* Darker shade of green on hover */
+}
+
+.overlay__content .header {
+  width: 100%;
+  background-color: white;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+.overlay__content .header a {
+  padding: 0 20px;
+  font-size: large;
+  font-weight: bold;
+  text-decoration: none;
+}
+.reviews__rating-second {
+  margin-top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+}
+
+.reviews__delete {
+  height: 2rem;
+  width: 2rem;
+  margin-left: 4px;
+  fill: #ec4f4f;
+}
+.reviews__delete:hover {
+  -webkit-transform: translateY(-3px);
+  transform: translateY(-3px);
+  transition: all 0.2s ease;
+  cursor: pointer;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
 }
