--- a/views/account.pug
+++ b/views/account.pug
@@ -12,7 +12,7 @@ block content
             nav.user-view__menu
                 ul.side-nav
                     +navItem('#', 'Settings', 'settings', true)
-                    +navItem('/my-tours', 'My bookings', 'briefcase', false)
+                    +navItem('/my-bookings', 'My bookings', 'briefcase', false)
                     +navItem('/my-reviews', 'My reviews', 'star', false)
                     +navItem('#', 'Billing', 'credit-card', false)
 
