--- a/views/editReview.pug
+++ b/views/editReview.pug
@@ -3,12 +3,14 @@ extends base
 block overlay 
     .overlay
         .overlay__content
-            h2 Edit Your Review
-            form(action="/save-review" method="POST")
-                .form__group
-                    label(for="review") Review:
-                    input#review.form__input(type="text" name="review" value=`${selectedReview.review}` )
-                .form__group
-                    label(for="rating") Rating:
-                    input#rating.form__input(type="number" name="rating" min="1" max="5" value=`${selectedReview.rating}`)
-                button.btn.btn--green.btn--small(type="submit") Save
+            .header
+                h2 Edit Your Review
+                a(href='/my-reviews') X
+            form(id='edit-review' data-user-id=`${selectedReview.user._id}` data-review-id=`${selectedReview._id}` )
+                .form__group-edit
+                    label(for="review") Review
+                    input.form__input(type="text" name="review" value=`${selectedReview.review}`  id='saved-review' )
+                .form__group-edit
+                    label(for="rating") Rating
+                    input.form__input(type="number" name="rating" min="1" max="5" value=`${selectedReview.rating}` id='saved-rating')
+                button#save-edit.btn.btn--green.btn--small Save
