--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1437,15 +1437,6 @@ body {
   color: #fff;
 }
 
-.btn {
-  width: 40%;
-}
-.btn--small {
-  padding: 1.25rem 1.5rem !important;
-  font-size: smaller !important;
-  text-align: center;
-}
-
 .dropdown {
   background-color: #fff; /* Background color */
   border: 1px solid #ccc; /* Border */
@@ -1505,7 +1496,7 @@ main.main {
 }
 
 .user-card {
-  border: 1px solid #ccc;
+  border: 2px solid #20bf6b;
   border-radius: 5px;
   padding: 10px;
   background-color: #f5f5f5;
@@ -1521,6 +1512,7 @@ main.main {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  
 }
 .user-role h3 {
   color: #20bf6b;
@@ -1552,4 +1544,219 @@ main.main {
 
 .delete-user-btn:hover {
   background-color: #cc4c3b;
+}
+
+.tour-review-container {
+  padding: 60px 0px;
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+}
+
+.tour-container-review {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.review-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  padding: 20px 0px 0px 0px;
+  column-gap: 10px;
+  row-gap: 10px;
+}
+
+.review-card {
+  border: 2px solid rgba(125, 213, 111, 0.85);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.card__footer-review {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  height: 10rem;
+}
+
+.buttons-review {
+  width: 4rem;
+  height: 20%;
+}
+.reviews__delete__admin {
+  width: 100%;
+  height: 100%;
+  fill: rgba(235, 102, 93, 0.85);
+  cursor: pointer;
+}
+.reviews__delete__admin:hover {
+  -webkit-transform: translateY(-3px);
+  transform: translateY(-3px);
+  fill: rgba(216, 75, 65, 0.85);
+}
+
+.bookings-main {
+  padding: 80px 60px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.tour-container-booking {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.booked-container  {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 40px;
+}
+.date-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.date-container h3{
+  font-size: 1.5rem;
+}
+
+.bookings-card-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  column-gap: 20px;
+  row-gap: 20px;
+}
+
+.booking-card {
+  width: 100%;
+  height: 20rem;
+  padding: 10px;
+  border: 2px solid rgba(125, 213, 111, 0.85);
+  border-radius: 1rem;
+}
+.card__details-booking {
+  display: flex;
+  flex-direction: column;
+}
+
+.card__details-review {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  gap: 0;
+}
+.user-details {
+  height: 40%;
+  text-align: center;
+}
+.tour-details {
+  height: 30%;
+  text-align: center;
+  margin-top: 1.5rem;
+}
+.user-email {
+  font-size: 1.25rem;
+  color:#999;
+  text-align: center;
+}
+.price {
+  font-size: 2rem;
+  font-weight:900;
+  text-align: center;
+}
+.card__details-review .edit-button {
+  width: 20%;
+  height: 20%;
+  border: none;
+}
+.edit-button {
+  margin-top: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
+  height: 3rem;
+  width: 100% !important;
+}
+.edit-button a{
+  width: 50%;
+  height: 100%;
+}
+.edit-booking {
+  width: 100%;
+  height: 100%;
+  fill: rgba(125, 213, 111, 0.85);
+  cursor: pointer;
+}
+.edit-booking:hover {
+  -webkit-transform: translateY(-3px);
+  transform: translateY(-3px);
+  fill: rgba(85, 216, 65, 0.85);
+}
+
+.booking__delete__admin{
+  width: 50%;
+  height: 100%;
+  fill: rgba(255, 91, 62, 0.85);
+  cursor: pointer;
+}
+.booking__delete__admin:hover {
+  -webkit-transform: translateY(-3px);
+  transform: translateY(-3px);
+  fill: rgba(216, 75, 65, 0.85);
+}
+
+#save-edit {
+  width: 20%;
+  height: 20%;
+  line-height: 2rem;
+  font-size: larger !important;
+}
+
+.form__group-edit-date {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 4rem;
+  align-items: center;
+}
+
+.form__group-edit-date label {
+  font-size: 1.5rem;
+}
+
+#startDate {
+  border: 2px solid rgb(171, 236, 72);
+  font-size: 1.5rem;
+  padding: 1rem 3rem;
+  border-radius: 2rem;;
+}
+#startDate:active {
+  border: 2px solid rgb(121, 202, 0);
+
+}#startDate:focus {
+  border: 2px solid rgb(121, 202, 0);
+
+}
+
+.tour-buttons {
+  height: 4rem;
+  background-color: #d66152;
+  cursor:pointer;
+  padding: 0.75rem  0;
+}
+.tour-buttons:hover {
+  background-color: #e4412b;
+}
+
+.tour__delete__admin {
+  fill: white;
+  height: 100%;
+
 }
