--- a/views/email/invoice.pug
+++ b/views/email/invoice.pug
@@ -2,11 +2,25 @@ extends baseEmail
 block content
     p Hi #{firstName},
     p Your Booking has successfull completed🎉
-    p We are thrilled to confirm your booking with us! Your adventure awaits, and we are excited to be a part of it.
+    p We are thrilled to confirm your booking for the #{tour.name} with us! Your adventure awaits, and we are excited to be a part of it.
     table.btn.btn-primary(role='presentation', border='0', cellpadding='0', cellspacing='0')
         tbody
         tr
             td(align='left')
+                table(style='margin-top: 20px; border-collapse: collapse; width: 100%;')
+                    thead
+                        tr
+                            th(style='border: 1px solid #dddddd; text-align: left; padding: 8px;') Description
+                            th(style='border: 1px solid #dddddd; text-align: left; padding: 8px;') Quantity
+                            th(style='border: 1px solid #dddddd; text-align: left; padding: 8px;') Unit Price
+                            th(style='border: 1px solid #dddddd; text-align: left; padding: 8px;') Amount
+                    tbody
+                        // Loop through each item in the invoice here
+                        tr
+                            td(style='border: 1px solid #dddddd; text-align: left; padding: 8px;')= tour.name
+                            td(style='border: 1px solid #dddddd; text-align: left; padding: 8px;') 1
+                            td(style='border: 1px solid #dddddd; text-align: left; padding: 8px;')= tour.price
+                            td(style='border: 1px solid #dddddd; text-align: left; padding: 8px;')= tour.price
 
                 p If you need any help with booking your next tour, please don't hesitate to contact me!
                 p - Gopi Kumar Shaw, CEO
